tests/semantic_analysis/error/struct_condition_error.c
struct_condition_error\.c:7:5: error:.*